--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/maknareen2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@Maknareen0503">
+    <meta name="twitter:image" content="./assets/webcover.png">
     <title>Meen CGM48 | Fan Website</title>
   </head>
   <body>
