--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@Maknareen0503">
+    <meta name="twitter:creator" content="@Maknareen0503">
+    <meta name="twitter:title" content="MeenCGM48 Fan Website">
+    <meta name="twitter:description" content="MeenCGM48 Fan Website">
     <meta name="twitter:image" content="./assets/webcover.png">
     <title>Meen CGM48 | Fan Website</title>
   </head>
