--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/maknareen2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@Maknareen0503">
-    <meta name="twitter:creator" content="@Maknareen0503">
-    <meta name="twitter:title" content="MeenCGM48 Fan Website">
-    <meta name="twitter:description" content="MeenCGM48 Fan Website">
-    <meta name="twitter:image" content="./assets/webcover.png">
+    <meta property="og:title" content="MeenCGM48 Fan Website"/>
+    <meta property="og:image" content="./assets/webcover.png"/>
+    <meta property="og:description" content="MeenCGM48 Fan Website"/>
+    <meta property="og:url" content="https://maknareen.vercel.app/"/>
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="627"/>
+    <meta property="og:type" content="website"/> 
     <title>Meen CGM48 | Fan Website</title>
   </head>
   <body>
