--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/assets/maknareen2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="MeenCGM48 Fan Website"/>
-    <meta property="og:image" content="./assets/webcover.png"/>
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/meencgm48website.appspot.com/o/images%2Fcover.png?alt=media&token=819bff23-1088-467d-8f95-85048b4df350"/>
     <meta property="og:description" content="MeenCGM48 Fan Website"/>
     <meta property="og:url" content="https://maknareen.vercel.app/"/>
     <meta property="og:image:width" content="1200" />
