--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/maknareen2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="MeenCGM48 Fan Website"/>
-    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/meencgm48website.appspot.com/o/images%2Fcover.png?alt=media&token=819bff23-1088-467d-8f95-85048b4df350"/>
-    <meta property="og:description" content="MeenCGM48 Fan Website"/>
-    <meta property="og:url" content="https://maknareen.vercel.app/"/>
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="627"/>
-    <meta property="og:type" content="website"/> 
+    <meta property="og:title" content="MeenCGM48 | Fan Website">
+    <meta property="og:description" content="MeenCGM48 Fan Website for update event">
+    <meta property="og:url" content="https://maknareen.vercel.app/">
+    <meta property="og:site_name" content="MeenCGM48 | Fan Website">
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/meencgm48website.appspot.com/o/images%2Fcover.png?alt=media&token=819bff23-1088-467d-8f95-85048b4df350">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta name="twitter:title" content="MeenCGM48 | Fan Website">
+    <meta name="twitter:description" content="MeenCGM48 Fan Website for update event">
+    <meta name="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/meencgm48website.appspot.com/o/images%2Fcover.png?alt=media&token=819bff23-1088-467d-8f95-85048b4df350">
+    <meta name="twitter:card" content="summary_large_image">
     <title>Meen CGM48 | Fan Website</title>
   </head>
   <body>
