--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta property="og:description" content="MeenCGM48 Fan Website for update event">
     <meta property="og:url" content="https://maknareen.vercel.app/">
     <meta property="og:site_name" content="MeenCGM48 | Fan Website">
-    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/meencgm48website.appspot.com/o/images%2Fcover.png?alt=media&token=819bff23-1088-467d-8f95-85048b4df350">
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/meencgm48website.appspot.com/o/images%2Fthumbnail.png?alt=media&token=cec0dd30-a2fb-474b-9697-6d94da9b7aa1">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:type" content="image/jpeg">
     <meta name="twitter:title" content="MeenCGM48 | Fan Website">
     <meta name="twitter:description" content="MeenCGM48 Fan Website for update event">
-    <meta name="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/meencgm48website.appspot.com/o/images%2Fcover.png?alt=media&token=819bff23-1088-467d-8f95-85048b4df350">
+    <meta name="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/meencgm48website.appspot.com/o/images%2Fthumbnail.png?alt=media&token=cec0dd30-a2fb-474b-9697-6d94da9b7aa1">
     <meta name="twitter:card" content="summary_large_image">
     <title>Meen CGM48 | Fan Website</title>
   </head>
